--- a/index.html
+++ b/index.html
@@ -64,10 +64,11 @@
             <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
          </div>
         </div>
-        <div>
+        <div class="feature-architect">
             <img src="./images/architect.png" alt="">
-            <button class="btn-primary">
-                <span>10+Year</span>
+            <button id="experience-badge" class="btn-primary">
+                <span id="experience-year">10+Year</span>
+                <br>
                 <span>Experience</span>
             </button>
         </div>
@@ -122,6 +123,12 @@
         </div>
       </section>
 </main>
-<footer></footer>
+<footer>
+    <section class="footer-section">
+        <div class="footer-text">
+            <p class="text-light-gray footer-texts">All rights reserved copyright@2023 startup landing page design</p>
+        </div>
+    </section>
+</footer>
 </body>
 </html>
